# docs/swagger.yaml
@@ -329,6 +329,57 @@ definitions:
     - page
     - page_size
     type: object
+  model.Language:
+    properties:
+      created_at:
+        type: string
+      display_order:
+        type: integer
+      is_active:
+        type: boolean
+      language_id:
+        type: integer
+      language_name:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  model.LanguageReqCreate:
+    properties:
+      display_order:
+        type: integer
+      is_active:
+        type: boolean
+      language_name:
+        type: string
+    required:
+    - language_name
+    type: object
+  model.LanguageReqEdit:
+    properties:
+      display_order:
+        type: integer
+      is_active:
+        type: boolean
+      language_id:
+        type: integer
+      language_name:
+        type: string
+    required:
+    - language_id
+    type: object
+  model.LanguageReqList:
+    properties:
+      keyword:
+        type: string
+      page:
+        type: integer
+      page_size:
+        type: integer
+    required:
+    - page
+    - page_size
+    type: object
   model.ListResponse-model_Article:
     properties:
       errCode:
@@ -401,6 +452,26 @@ definitions:
         description: 列表
         items:
           $ref: '#/definitions/model.File'
+        type: array
+      success:
+        description: 请求是否成功
+        type: boolean
+      total:
+        description: 总条数
+        type: integer
+    type: object
+  model.ListResponse-model_Language:
+    properties:
+      errCode:
+        description: 错误码
+        type: string
+      errMessage:
+        description: 错误信息
+        type: string
+      list:
+        description: 列表
+        items:
+          $ref: '#/definitions/model.Language'
         type: array
       success:
         description: 请求是否成功
@@ -795,6 +866,22 @@ definitions:
       data:
         allOf:
         - $ref: '#/definitions/model.File'
+        description: 数据
+      errCode:
+        description: 错误码
+        type: string
+      errMessage:
+        description: 错误信息
+        type: string
+      success:
+        description: 请求是否成功
+        type: boolean
+    type: object
+  model.Response-model_Language:
+    properties:
+      data:
+        allOf:
+        - $ref: '#/definitions/model.Language'
         description: 数据
       errCode:
         description: 错误码
@@ -1806,6 +1893,148 @@ paths:
       summary: 获取文件列表
       tags:
       - Files
+  /api/languages:
+    post:
+      consumes:
+      - application/json
+      description: 创建一个新语言
+      parameters:
+      - description: 语言信息
+        in: body
+        name: language
+        required: true
+        schema:
+          $ref: '#/definitions/model.LanguageReqCreate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response-model_Language'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 创建语言
+      tags:
+      - Languages
+    put:
+      consumes:
+      - application/json
+      description: 更新语言信息
+      parameters:
+      - description: 语言信息
+        in: body
+        name: language
+        required: true
+        schema:
+          $ref: '#/definitions/model.LanguageReqEdit'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 更新语言
+      tags:
+      - Languages
+  /api/languages/{language_id}:
+    delete:
+      consumes:
+      - application/json
+      description: 删除一个语言
+      parameters:
+      - description: 语言ID
+        in: path
+        name: language_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 删除语言
+      tags:
+      - Languages
+    get:
+      consumes:
+      - application/json
+      description: 获取单个语言
+      parameters:
+      - description: 语言ID
+        in: path
+        name: language_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response-model_Language'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 获取语言
+      tags:
+      - Languages
+  /api/languages/list:
+    post:
+      consumes:
+      - application/json
+      description: 获取语言分页列表
+      parameters:
+      - description: 分页与搜索
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/model.LanguageReqList'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ListResponse-model_Language'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.BaseResponse'
+      summary: 获取语言列表
+      tags:
+      - Languages
   /api/menus:
     post:
       consumes:
